# minifloat_representation

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: float8.h
src/: float8.c  float8.h  main.c
test/: test_float8.c  test_float8.h  test_main.c
